<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:background="@color/white"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu" />

        <item
            android:id="@+id/nav_recipes"
            android:background="@color/white"
            android:icon="@drawable/ic_cookbook"
            android:title="@string/recipes_menu" />


    </group>


    <item android:title="@string/information_menu">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about_menu" />
            </group>
        </menu>


    </item>
</menu>
