<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:orientation="vertical"
    tools:context=".CreateRecipeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">


            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_image"
                app:tint="@color/grey_300" />

            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/create_title"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/recipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/create_ingredients"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/recipeMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/create_method"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/recipeTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/create_time"
                android:textSize="19sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#48E199"
                android:onClick="btnSelectImage"
                android:text="@string/create_image_btn"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="#48E199"
                android:onClick="btnCreateRecipe"
                android:text="@string/create_btn"
                android:textColor="#ffffff"
                android:textSize="22sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>