<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/toolbar"
                android:scaleType="centerCrop"
                android:src="@drawable/noodles" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_image"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="Title"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_title"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-15dp"
                android:layout_marginRight="20dp"
                android:text="@string/recipeTitle"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/detail_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="Ingredients"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_ingredients"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-15dp"
                android:layout_marginRight="20dp"
                android:text="@string/recipeIngredients"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/detail_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredients"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="Method"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_method"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-15dp"
                android:layout_marginRight="20dp"
                android:text="@string/recipeMethod"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/detail_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/method"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="Video"
                android:textSize="19sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_video"
                android:padding="20dp">

                <VideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>