<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    tools:context=".RecipeDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/toolbar"
                android:scaleType="centerCrop"
                android:src="@drawable/noodles" />

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipe_image"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="Title"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recipe_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-15dp"
                android:layout_marginRight="20dp"
                android:text="@string/recipeTitle"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/recipe_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="Ingredients"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recipe_ingredients"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-15dp"
                android:layout_marginRight="20dp"
                android:text="@string/recipeIngredients"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/recipe_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredients"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="Method"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recipe_method"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-15dp"
                android:layout_marginRight="20dp"
                android:text="@string/recipeMethod"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/method"
                android:layout_margin="20dp"
                android:backgroundTint="#48E199"
                android:onClick="btnUpdateRecipe"
                android:text="Update"
                android:textColor="#ffffff"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:backgroundTint="#48E199"
                android:onClick="btnDeleteRecipe"
                android:text="Delete"
                android:textColor="#ffffff"
                android:textSize="22sp" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>